# govManage-policy-analyst

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  Agentic AI Framework for Governance Management.html  CHECKLIST.md  DEPLOYMENT.md  EXECUTIVE_OVERVIEW.md  FRAMEWORK_DISCOVERY_QUICKSTART.md  INDEX.md  Procfile  QUICK_REFERENCE.md  README.md  SUMMARY.md  SYSTEM_FLOW.md  TRANSFORMATION.md  act.bat  agenticworkflow.txt  agents.py  ai_policy_chat_summary.md  api.py  api_dynamic.py  app.py  close.bat  cmds.txt  database.py  email_service.py  features.txt  launch.bat  launch.sh  launch_agents.bat  llm_utils.py  main.py  orchestrator.py  pdf_extract.txt  pyproject.toml  report_pdf.py  reports.py  requirements.txt  reset_system.py  (+16 more)
agentic_core/: __init__.py  base_agent.py  memory.py  orchestrator.py  tools.py
agentic_core/agents/: __init__.py  compliance_agent.py  decision_agent.py  (+5 more)
agents_micro/: feedback_log.json
backend/: agent_runner.py  app.py  crawler.py  database.py  file_parser.py  logger_config.py  orchestrator.py  pyproject.toml  refactor.py  report_pdf.py  reports.py  requirements.txt  reset_system.py  serve.py  vector_store.py  wsgi.py
chroma_data/: chroma.sqlite3
compliance_frameworks/: loader.py
document_processing/: __init__.py  framework_extractor.py  parser.py
frontend/: .env.example  framework_discovery.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scratch/: fix_imports.py  fix_ts.py  refactor_agents.py  refactor_groq.py
tests/: conftest.py  test_api_routes.py  test_database.py
(+138 files in other folders)
