[project]
name = "govmanage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.25",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "watchdog>=6.0.0",
]
